fix sort button not showing on list page

--- a/style.css
+++ b/style.css
@@ -534,10 +534,6 @@ video {
   position: relative;
 }
 
-.-left-\[50\%\] {
-  left: -50%;
-}
-
 .-right-4 {
   right: -1rem;
 }
@@ -550,20 +546,8 @@ video {
   left: 0px;
 }
 
-.right-0 {
-  right: 0px;
-}
-
 .top-0 {
   top: 0px;
-}
-
-.top-\[100\%\] {
-  top: 100%;
-}
-
-.top-\[150\%\] {
-  top: 150%;
 }
 
 .z-10 {
@@ -574,29 +558,8 @@ video {
   z-index: 40;
 }
 
-.z-50 {
-  z-index: 50;
-}
-
-.float-right {
-  float: right;
-}
-
-.float-left {
-  float: left;
-}
-
 .m-6 {
   margin: 1.5rem;
-}
-
-.m-4 {
-  margin: 1rem;
-}
-
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
 }
 
 .my-5 {
@@ -609,25 +572,8 @@ video {
   margin-bottom: 1.5rem;
 }
 
-.my-8 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
-.ml-\[100px\] {
-  margin-left: 100px;
-}
-
 .mr-8 {
   margin-right: 2rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
-}
-
-.mt-6 {
-  margin-top: 1.5rem;
 }
 
 .mt-auto {
@@ -658,14 +604,6 @@ video {
   height: 100vh;
 }
 
-.max-h-\[50vh\] {
-  max-height: 50vh;
-}
-
-.w-\[100px\] {
-  width: 100px;
-}
-
 .w-\[15px\] {
   width: 15px;
 }
@@ -678,20 +616,12 @@ video {
   width: 20px;
 }
 
-.w-\[250px\] {
-  width: 250px;
-}
-
 .w-\[25px\] {
   width: 25px;
 }
 
 .w-\[30px\] {
   width: 30px;
-}
-
-.w-\[35px\] {
-  width: 35px;
 }
 
 .w-fit {
@@ -703,10 +633,6 @@ video {
   width: 100%;
 }
 
-.min-w-\[150px\] {
-  min-width: 150px;
-}
-
 .min-w-\[300px\] {
   min-width: 300px;
 }
@@ -715,12 +641,16 @@ video {
   min-width: 100%;
 }
 
+.min-w-\[15px\] {
+  min-width: 15px;
+}
+
 .max-w-\[360px\] {
   max-width: 360px;
 }
 
-.max-w-xl {
-  max-width: 36rem;
+.table-fixed {
+  table-layout: fixed;
 }
 
 .border-separate {
@@ -757,16 +687,8 @@ video {
   align-items: flex-start;
 }
 
-.items-end {
-  align-items: flex-end;
-}
-
 .items-center {
   align-items: center;
-}
-
-.justify-end {
-  justify-content: flex-end;
 }
 
 .justify-center {
@@ -827,12 +749,6 @@ video {
   row-gap: 1.5rem;
 }
 
-.space-x-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .space-y-12 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(3rem * calc(1 - var(--tw-space-y-reverse)));
@@ -869,10 +785,6 @@ video {
 
 .rounded-3xl {
   border-radius: 1.5rem;
-}
-
-.rounded-\[20px\] {
-  border-radius: 20px;
 }
 
 .rounded-\[30px\] {
@@ -933,15 +845,6 @@ video {
   background-color: rgb(31 55 117 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#216FED\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(33 111 237 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#216FED\]\/10 {
-  background-color: rgb(33 111 237 / 0.1);
-}
-
 .bg-\[\#222A3C\] {
   --tw-bg-opacity: 1;
   background-color: rgb(34 42 60 / var(--tw-bg-opacity));
@@ -980,10 +883,6 @@ video {
 .bg-\[\#FAC25C\] {
   --tw-bg-opacity: 1;
   background-color: rgb(250 194 92 / var(--tw-bg-opacity));
-}
-
-.bg-black\/50 {
-  background-color: rgb(0 0 0 / 0.5);
 }
 
 .bg-white {
@@ -1050,16 +949,6 @@ video {
   padding-right: 1.75rem;
 }
 
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
-.px-\[18px\] {
-  padding-left: 18px;
-  padding-right: 18px;
-}
-
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -1075,16 +964,6 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
@@ -1094,25 +973,12 @@ video {
   padding-bottom: 1rem;
 }
 
-.pr-4 {
-  padding-right: 1rem;
-}
-
-.text-end {
-  text-align: end;
-}
-
 .font-logo {
   font-family: Proxima Nova, sans-serif;
 }
 
 .font-urbanist {
   font-family: Urbanist, sans-serif;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .text-lg {
@@ -1147,21 +1013,12 @@ video {
   font-weight: 500;
 }
 
-.font-normal {
-  font-weight: 400;
-}
-
 .font-semibold {
   font-weight: 600;
 }
 
 .tracking-wider {
   letter-spacing: 0.05em;
-}
-
-.text-\[\#1F3775\] {
-  --tw-text-opacity: 1;
-  color: rgb(31 55 117 / var(--tw-text-opacity));
 }
 
 .text-\[\#216FED\] {
@@ -1177,11 +1034,6 @@ video {
 .text-\[\#848484\] {
   --tw-text-opacity: 1;
   color: rgb(132 132 132 / var(--tw-text-opacity));
-}
-
-.text-\[\#B93F61\] {
-  --tw-text-opacity: 1;
-  color: rgb(185 63 97 / var(--tw-text-opacity));
 }
 
 .text-black {
@@ -1200,12 +1052,6 @@ video {
 
 .opacity-\[0\.2\] {
   opacity: 0.2;
-}
-
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-md {
@@ -1324,10 +1170,6 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
   .sm\:pb-0 {
     padding-bottom: 0px;
   }
@@ -1340,28 +1182,12 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:ml-\[25vw\] {
-    margin-left: 25vw;
-  }
-
-  .lg\:w-\[25vw\] {
-    width: 25vw;
-  }
-
-  .lg\:w-\[75vw\] {
-    width: 75vw;
-  }
-
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
 
 @media (min-width: 1280px) {
-  .xl\:ml-\[20vw\] {
-    margin-left: 20vw;
-  }
-
   .xl\:ml-\[15vw\] {
     margin-left: 15vw;
   }
@@ -1374,14 +1200,6 @@ video {
     display: flex;
   }
 
-  .xl\:w-\[20vw\] {
-    width: 20vw;
-  }
-
-  .xl\:w-\[80vw\] {
-    width: 80vw;
-  }
-
   .xl\:w-\[85vw\] {
     width: 85vw;
   }
@@ -1392,18 +1210,6 @@ video {
 }
 
 @media (min-width: 1536px) {
-  .\32xl\:ml-\[15vw\] {
-    margin-left: 15vw;
-  }
-
-  .\32xl\:w-\[15vw\] {
-    width: 15vw;
-  }
-
-  .\32xl\:w-\[85vw\] {
-    width: 85vw;
-  }
-
   .\32xl\:grid-cols-5 {
     grid-template-columns: repeat(5, minmax(0, 1fr));
   }
